<resources>
    <string name="app_name">KotlinLimitScrollApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_recycler_view_index">RecyclerViewIndexActivity</string>
    <string name="tip_txt">A</string>
    <string name="rv_index_title">测试RecyclerView</string>

    <string name="single_click_key">single_click_key</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="test_one">test_one</string>
    <string name="test_two">test_two</string>
    <string name="test_thr">test_thr</string>

    <string name="name_a">Tom</string>
    <string name="name_b">Tim</string>
    <string name="name_c">Joe</string>

    <string name="apple">apple</string>
    <string name="banana">banana</string>
    <string name="pear">pear</string>

    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>

    <string name="python">python</string>
    <string name="java">java</string>
    <string name="kotlin">kotlin</string>

</resources>
