<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.children.ChildOneFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/test_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/test_two"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:background="@color/colorAccent"
        android:text="@string/test_one"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/test_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/test_one"
        app:layout_constraintRight_toLeftOf="@id/test_thr"
        android:background="@color/colorPrimaryDark"
        android:text="@string/test_two"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/test_thr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/test_two"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        android:text="@string/test_thr"
        android:textAllCaps="false"/>

    <!--=========================================================-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/name_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/test_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/name_b"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:background="@color/colorPrimary"
        android:text="@string/name_a"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/name_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/test_one"
        app:layout_constraintLeft_toRightOf="@id/name_a"
        app:layout_constraintRight_toLeftOf="@id/name_c"
        android:background="@color/colorAccent"
        android:text="@string/name_b"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/name_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/test_one"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/name_b"
        android:background="@color/colorPrimaryDark"
        android:text="@string/name_c"
        android:textAllCaps="false"/>

    <!--=========================================================-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/name_a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/banana"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:background="@android:color/holo_green_dark"
        android:text="@string/apple"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/banana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/name_a"
        app:layout_constraintLeft_toRightOf="@id/apple"
        app:layout_constraintRight_toLeftOf="@id/pear"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/banana"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/name_a"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/banana"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/pear"
        android:textAllCaps="false"/>

    <!--=========================================================-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/apple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pause"
        style="@android:style/Widget.Material.Button.Borderless"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/start"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toBottomOf="@id/apple"
        app:layout_constraintLeft_toRightOf="@id/start"
        app:layout_constraintRight_toLeftOf="@id/stop"
        style="@android:style/Widget.Material.Button.Borderless"
        android:background="@android:color/holo_purple"
        android:text="@string/pause"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintTop_toBottomOf="@id/apple"
        app:layout_constraintLeft_toRightOf="@id/pause"
        app:layout_constraintRight_toRightOf="parent"
        style="@android:style/Widget.Material.Button.Borderless"
        android:background="@android:color/holo_red_light"
        android:text="@string/stop"
        android:textAllCaps="false"/>

    <!--=========================================================-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/python"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/java"
        style="@android:style/Widget.Material.Button.Borderless"
        android:background="@android:color/holo_purple"
        android:text="@string/python"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/java"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start"
        app:layout_constraintLeft_toRightOf="@id/start"
        app:layout_constraintRight_toLeftOf="@id/kotlin"
        style="@android:style/Widget.Material.Button.Borderless"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/java"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kotlin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start"
        app:layout_constraintLeft_toRightOf="@id/java"
        app:layout_constraintRight_toRightOf="parent"
        style="@android:style/Widget.Material.Button.Borderless"
        android:background="@android:color/holo_red_dark"
        android:text="@string/kotlin"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>