<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_245"
    android:layout_height="@dimen/dp_200"
    android:background="@drawable/define_dialog_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        android:text="@string/app_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintRight_toLeftOf="@id/btn_sure"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@drawable/dialog_left_btn_selector"
        android:text="@string/cancel"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@drawable/dialog_right_btn_selector"
        android:text="@string/sure"/>

</androidx.constraintlayout.widget.ConstraintLayout>